# insight

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac
doc/: Makefile.am  doxygen.cfg.in  insight.dtd  xml-annotations.org
doc/doxygen/: doxygen.cfg.in  header.html  insight.css
doc/manuals/: common-macros.texi.in  insight-dev-manual.texi  insight-user-manual.texi
doc/tutorials/: Makefile.am
doc/tutorials/iii/: Makefile.am  acknowledgments.texi  advanced-features.texi  appendices.texi  basic-features.texi  iii-tutorial.texi  index.texi  introduction.texi  macros.texi  references.texi  the-crackme.texi  titlepage.texi
src/: Makefile.am
src/analyses/: CFG.cc  CFG.hh  Wp.cc  Wp.hh  microcode_exec.hh  microcode_exec.ii
src/analyses/cfgrecovery/: AbstractContext.cc  AbstractContext.hh  AbstractDomainContext.hh  AbstractDomainContext.ii  AbstractDomainStepper.hh  AbstractDomainStepper.ii  AbstractMemoryTraversal.hh  AbstractMemoryTraversal.ii  AbstractProgramPoint.hh  AbstractProgramPoint.ii  AbstractState.hh  AbstractState.ii  AbstractStateSpace.hh  AbstractStepper.hh  AlgorithmFactory.cc  AlgorithmFactory.hh  DomainSimulator.hh  DummyStateSpace.hh  FloodTraversal.hh  FloodTraversalStepper.cc  LinearSweep.hh  LinearSweepStepper.cc  MicrocodeAddressProgramPoint.cc  MicrocodeAddressProgramPoint.hh  NullContext.cc  NullContext.hh  RecursiveTraversal.hh  RecursiveTraversalContext.cc  RecursiveTraversalStepper.cc  SingleContextStateSpace.hh  SingleContextStateSpace.ii
src/analyses/slicing/: Slicing.cc  Slicing.hh
src/analyzers/: Wp.cc
src/decoders/: Decoder.cc  Decoder.hh  DecoderFactory.cc  DecoderFactory.hh
src/decoders/binutils/: BinutilsDecoder.cc  BinutilsDecoder.hh
src/domains/: ExprSemantics.hh  ExprSemantics.ii
src/domains/common/: ConcreteAddressMemory.hh  ConcreteAddressMemory.ii  (+2 more)
src/interpreters/: ExprSemantics.hh  microcode_exec.hh  microcode_exec.ii
src/io/: LoaderFactory.cc  LoaderFactory.hh
src/kernel/: Address.cc  Address.hh  Annotable.cc  Annotable.hh  Annotation.cc  Annotation.hh  Architecture.cc  Architecture.hh  Architecture_ARM.cc  Architecture_ARM.hh  Architecture_SPARC.cc  Architecture_SPARC.hh  Architecture_X86_32.cc  Architecture_X86_32.hh  Architecture_X86_64.cc  Architecture_X86_64.hh  Architecture_msp430.cc  Architecture_msp430.hh  Expressions.cc  Expressions.hh  Insight.cc  Insight.hh  Memory.hh  Memory.ii  Microcode.cc  Microcode.hh  RegisterMap.hh  RegisterMap.ii  SymbolTable.cc  SymbolTable.hh  Value.cc  Value.hh  insight.cc  insight.hh
src/loaders/: LoaderFactory.cc  LoaderFactory.hh
src/utils/: ConfigTable.cc  ConfigTable.hh  FileStreamBuffer.hh  FileStreamBuffer_char.cc  Log.cc  Log.hh  Object.cc  Object.hh  Option.hh  bv-manip.hh  graph.hh  graph.ii  infrastructure.hh  logs.cc  logs.hh  map-helpers.hh  path.hh  path.ii  tools.cc  tools.hh  unordered11.hh
test/: Kyuafile  Makefile.am  Makefile.inc.in  cfgrecovery.cfg.in  check-results.sh
test/bugs/: Kyuafile  Makefile.am  bug_001_test.cc
test/decoders/: Makefile.am  test-decoder-x86.cc  test-decoder.cc  x86_32-aaa.memres.result  x86_32-aaa.res.result  x86_32-aad.memres.result  x86_32-aad.res.result  x86_32-aam.memres.result  x86_32-aam.res.result  x86_32-aas.memres.result  x86_32-aas.res.result  x86_32-and.memres.result  x86_32-and.res.result  x86_32-bound.memres.result  x86_32-bound.res.result  x86_32-bsf.memres.result  x86_32-bsf.res.result  x86_32-bsr.memres.result  x86_32-bsr.res.result  x86_32-bswap.memres.result  x86_32-bswap.res.result  x86_32-bt.memres.result  x86_32-bt.res.result  x86_32-btc.memres.result  x86_32-btc.res.result  x86_32-btr.memres.result  x86_32-btr.res.result  x86_32-bts.memres.result  x86_32-bts.res.result  x86_32-call.memres.result  x86_32-call.res.result  x86_32-cmp.memres.result  x86_32-cmp.res.result  x86_32-cmps.memres.result  x86_32-cmps.res.result  x86_32-cmpxchg.memres.result  x86_32-cmpxchg.res.result  x86_32-daadas.memres.result  x86_32-daadas.res.result  x86_32-div.memres.result  (+66 more)
test/domains/: Kyuafile  Makefile.am
test/io/: Kyuafile  Makefile.am  binaryloader_test.cc  expr_to_smtlib_test.cc
test/kernel/: Kyuafile  Makefile.am  architecture_test.cc  expr_parser_test.cc  expr_solver_test.cc  expression_test.cc  formula_test.cc
test/loaders/: Kyuafile
test/slicing/: Kyuafile  Makefile.am  check-diff.result  check-results.sh  slicer.cc  x86_32-gcd.memres.result  x86_32-gcd.res.result  x86_32-gcd.spec.sh  x86_32-slicing-01.memres.result  x86_32-slicing-01.res.result  x86_32-slicing-01.spec.sh  x86_32-slicing-02.memres.result  x86_32-slicing-02.res.result  x86_32-slicing-02.spec.sh
test/test-samples/: GNUmakefile  echo-freebsd-amd64  echo-freebsd-i386  echo-hurd-i386  echo-linux-amd64  echo-linux-arm64  echo-linux-armel  echo-linux-i386  echo-linux-sparc  echo-linux-sparc64  echo-macho-multiarch  echo-windows-amd64  x86_32-aaa.s  x86_32-aad.s  x86_32-aam.s  x86_32-aas.s  x86_32-and.s  x86_32-bound.s  x86_32-bsf.s  x86_32-bsr.s  x86_32-btr.s  x86_32-bts.s  x86_32-call.s  x86_32-cfgrecovery-02.s  x86_32-cfgrecovery-03.s  x86_32-cfgrecovery-04.s  x86_32-cfgrecovery-05.s  x86_32-cmp.s  x86_32-cmps.s  x86_32-cmpxchg.s  x86_32-daadas.s  x86_32-div.s  x86_32-enter-leave.s  x86_32-imul.s  x86_32-int.s  x86_32-jcc.s  x86_32-jmp.s  x86_32-lods.s  x86_32-loop.s  x86_32-misc-02.s  (+223 more)
test/tools/: Makefile.am
test/utils/: Kyuafile  Makefile.am  configtable_test.cc
tools/cfgrecovery/: ConcreteMemoryTraversal.cc  ConcreteMemoryTraversal.hh  FloodTraversal.cc  FloodTraversal.hh  Makefile.am  SymbolicSimulator.cc  SymbolicSimulator.hh  SymbolicState.cc  SymbolicState.hh  algorithms.cc  algorithms.hh  cfgrecovery.cc  cfgrecovery.hh  linearsweep.cc  linearsweep.hh  recursivetraversal.cc  recursivetraversal.hh  simulator.cc  simulator.hh  symbexec.cc  symbexec.hh
tools/pynsight/: Makefile.am  __init__.py  config.cc  debugger.py  error.cc  gengen.cc  gengen.hh  iii  iii.py  insightdb  insightdb.py  io.cc  microcode.cc  program.cc  pynsight.cc  pynsight.hh  simulator.cc  utils.py  xdot.py
(+1145 files in other folders)
